--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
     "nodes": [
         { "id": "default", "host": "localhost", "port": 2333, "password": "youshallnotpass" }
     ],
-    "owner": "your discord id"
+    "owner": "441007897321799681"
 }
