--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/node_modules
+/package-lock.json
+/config.json
 
 # TypeScript v1 declaration files
 typings/
@@ -90,8 +93,6 @@ dist
 
 # vuepress build output
 .vuepress/dist
-/node_modules
-/package-lock.json
 
 # Serverless directories
 .serverless/
