--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     ],
     "author": "TiagoVaz",
     "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/TiagoVaz50/rprojectg"
+    },
     "dependencies": {
         "@discordjs/opus": "^0.3.2",
-        "discord.js": "^12.3.1",
+        "discord.js": "^12.4.1",
         "firebase": "^7.24.0",
         "lavacord": "^1.1.9",
         "lavalink": "^2.10.2"
-    }
+    },
+    "devDependencies": {}
 }
