--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ jspm_packages/
 /node_modules
 /package-lock.json
 /config.json
+config.json
+config.json/
 # TypeScript v1 declaration files
 typings/
 
